--- a/agency.html
+++ b/agency.html
@@ -84,7 +84,7 @@
                data-period="400"
                data-rotate='[ "Customer Support.", "Lead Generator.", "Customer Engager.", "Appointment Scheduler.", "Job Processer.", "Order Tracker", "Sales & Promoter", "Feedback Collector", "Event Registrator", "Billing & Payment", "FAQ Automator."]'></span></h1>
 
-            <h2>💬 We Empower Businesses with AI Chatbots Seamlessly Integrated into WhatsApp and the Web.<br><br>
+            <h2>💬 We Empower Businesses with AI Chatbots Seamlessly Integrated into WhatsApp, Facebook Messenger, the Web or in ChatGPT itself via <a href="https://openai.com/blog/chatgpt-plugins" target="_blank" style="text-decoration:none">ChatGPT plugins</a>.<br><br>
             📈 As the <a href="https://www.grandviewresearch.com/industry-analysis/artificial-intelligence-ai-market" target="_blank" style="text-decoration:none">AI industry is set to soar to $1.81 trillion by 2030</a>, it's essential for your business to stay ahead.<br><br>🔝 MIT Sloan Management reports that <a href="https://web-assets.bcg.com/1e/4f/925e66794465ad89953ff604b656/mit-bcg-expanding-ai-impact-with-organizational-learning-oct-2020-n.pdf" target="_blank" style="text-decoration:none">9 in 10 businesses believe AI will give them an edge over their rivals</a>.<br><br>👉 Enhance customer service, generate leads, and propel growth with our tailored solutions.</h2>
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
