--- a/kelly.html
+++ b/kelly.html
@@ -94,7 +94,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="pink d-flex align-items-center">
+  <section id="hero" class="pink d-flex align-items-center pb-5">
 
     <div class="container">
       <div class="row">
