--- a/pricing.html
+++ b/pricing.html
@@ -127,24 +127,13 @@
 
         <div class="row text-center content mb-5 bg">
 
-          <small class="smallText">CAN'T I JUST USE CHATGPT/POE?</small>
-          <div class="col-md-12 pt-4" data-aos="fade-up">
-            <h3>🤔 Honestly Now, Can ChatGPT Provide Personalised and Accurate Responses Without Access to Your Specific Data?</h3>
+          <small class="smallText">Tabmed AI Pricing Plans</small>
+          <div class="col-md-12 pt-4 bigger" data-aos="fade-up">
+            <h1>🫶 Pricing that's simple, predictable, and built to scale.</h1>
             <p class="mt-3">
-              Creating a chatbot trained on <strong>your own content, voice, personality and style</strong> is now as easy as 🥧 ... and by pie, we mean the "easy as pie" part, not the baking part.
-            </p>
+                Save 30% (3.6 months free) on our yearly plans. <i class="bi bi-arrow-down-left"></i></p>
+                <small><a href="demo.html" class = "link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank" style="text-decoration:none"><u>Try a demo of a bot here</u></a></small>
 
-            <p>
-              Ingest Any Resource <i class="bi bi-arrow-right"></i> Customise Your Model <i class="bi bi-arrow-right"></i> Implement Your Chatbot Anywhere <i class="bi bi-arrow-right"></i> Conversation Monitoring and Response Refinement
-            </p>
-
-            <p class="mt-5">
-              <strong>Try our no commitment 7 day free trial and see the magic of deploying generative AI in real world use cases.</strong>
-            </p>
-            <a href="pricing.html" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Start Your Free Trial</button></a>
-            <div class="mt-3">
-              <small><a href="pricing.html" class = "link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank" style="text-decoration:none"><u>Or contact us for any questions you might have</u></a></small>
-            </div>
           </div>
         </div>
       </div>
@@ -156,60 +145,144 @@
     </stripe-pricing-table>
     <!-- ======= Frequently Asked Questions Section ======= -->
    <section id="faq" class="faq section-bg">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
 
         <div class="section-title">
 
-          <h2>Frequently Asked Questions</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
+          <h1>💬 Frequently Asked Questions</h1>
+          <small><a href="contact.html" class = "link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank" style="text-decoration:none"><u>Or contact us for any questions you might have</u></a></small>        </div>
 
         <div class="accordion-list">
           <ul>
-            <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1">Non consectetur a erat nam at lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <li  data-aos="fade-up">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1">Is there a free plan?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
                 <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                  No. At the moment, we are not offering a free plan. You can go to <a class="faqlink" href="demo.html">tabmed.hk/demo</a> and try our demo bot or <strong><a class="faqlink" href="contact.html">contact us</a></strong> for a live demo from our team.
                 </p>
               </div>
             </li>
 
-            <li data-aos="fade-up" data-aos-delay="100">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed">Feugiat scelerisque varius morbi enim nunc? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
+            <li data-aos="fade-up">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-2">What is 1 message?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="accordion-list-2" class="collapse show" data-bs-parent=".accordion-list">
                 <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                  1 message credit is equal to 1 complete A.I. generated response.
                 </p>
               </div>
             </li>
 
-            <li data-aos="fade-up" data-aos-delay="200">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed">Dolor sit amet consectetur adipiscing elit? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <li data-aos="fade-up">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed">Can I get more chatbots?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
                 <p>
-                  Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                  You can get additional chatbots with our ultimate plan (10 chatbots + additional chatbots charged per unit per month) and custom plan.
                 </p>
               </div>
             </li>
 
-            <li data-aos="fade-up" data-aos-delay="300">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-4" class="collapsed">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <li data-aos="fade-up">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-4" class="collapsed">Can I get more message credits? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="accordion-list-4" class="collapse" data-bs-parent=".accordion-list">
                 <p>
-                  Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in.
+                  Yes - you can add message credits manually or automatically when you run out. Each message credit costs about ~ $0.01 USD / HKD $0.08.
                 </p>
               </div>
             </li>
 
-            <li data-aos="fade-up" data-aos-delay="400">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <li data-aos="fade-up">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed">How secure is the data that I upload?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="accordion-list-5" class="collapse" data-bs-parent=".accordion-list">
                 <p>
-                  Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque.
+                  All data uploaded to any Tabmed account is stored in a 256-bit encrypted database that is only accessible to the users you decide. Your data will never be used or sold to 3rd parties.
                 </p>
               </div>
             </li>
+
+            <li data-aos="fade-up">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-6" class="collapsed">How does the chatbot know everything about me / my business / my organisation?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="accordion-list-6" class="collapse" data-bs-parent=".accordion-list">
+                <p>
+                  When creating your chatbot, Tabmed AI will ask you to enter the URL of the website you want the A.I. to learn from. Within seconds, the chatbot will know everything about you / your business / your organisation and be able to relay the information in a conversation format. <br><br>
+
+                  Additionally, you can upload a .pdf, .txt, .doc, or .docx files. containing information that you would like your chatbot to know. You can also copy/paste a raw text file and a Q&A.
+                </p>
+              </div>
+            </li>
+
+            <li data-aos="fade-up">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-7" class="collapsed">What if my website is not up to date / I don't have a website?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="accordion-list-7" class="collapse" data-bs-parent=".accordion-list">
+                <p>
+                  This isn't a problem! If your website does not have up-to-date information about your products, services, or pricing, you can update the Tabmed AI knowledge-base with accurate information through text or document files (.pdf, .txt, .doc, .docs files). Then when asked, your chatbot will respond with the information you provided and override what is on-your website. This way, we can guarantee that your chatbot always responds with 100% accuracy.
+                </p>
+              </div>
+            </li>
+
+
+            <li data-aos="fade-up"  >
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-9" class="collapsed">What types of content are acceptable for training the chatbot?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="accordion-list-9" class="collapse" data-bs-parent=".accordion-list">
+                <p>
+                  Tabmed AI is versatile and accommodates a variety of content types to train the chatbot. This includes website content, direct text input, and various file formats such as .pdf, .txt, .doc, or .docx. The richness and breadth of your provided content can significantly enhance the chatbot's ability to respond accurately and comprehensively to queries. The more content you provide, the more equipped the chatbot becomes!
+                </p>
+              </div>
+            </li>
+
+            <li data-aos="fade-up"  >
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-10" class="collapsed">How can I integrate the chatbot into my website?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="accordion-list-10" class="collapse" data-bs-parent=".accordion-list">
+                <p>
+                  Tabmed AI provides an intuitive and efficient process to incorporate the chatbot into your website. Each chatbot is associated with a distinct URL. You can use this URL to seamlessly embed the chatbot on your website via the iframe code that we furnish. If preferred, you can also establish a direct hyperlink to the chatbot from your site. The process is designed for optimal user convenience.<br><br>For 1-on-1 live guidance on embedding the chat bot onto your website or app, feel free to <strong><a class="faqlink" href="contact.html">contact us</a></strong>.
+                </p>
+              </div>
+            </li>
+
+            <li data-aos="fade-up"  >
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-11" class="collapsed">How do I embed the chatbot into my app?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="accordion-list-11" class="collapse" data-bs-parent=".accordion-list">
+                <p>
+                  Integrating Tabmed AI's chatbot into your application is a straightforward process. For iOS applications, you can utilize the WebView component from the WebKit framework to embed the chatbot through an iframe. This allows your application to display web content directly within your app.<br><br>
+
+                  For Android applications, you can use the WebView widget available in Android's API. Similar to iOS, you can use this widget to display web content, including iframes, directly within your app.
+
+                  <br><br>For 1-on-1 live guidance on embedding the chat bot onto your website or app, feel free to <strong><a class="faqlink" href="contact.html">contact us</a></strong>.
+                </p>
+              </div>
+            </li>
+
+            <li data-aos="fade-up"  >
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-12" class="collapsed">Does Tabmed AI support websites in languages other than English and Chinese?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="accordion-list-12" class="collapse" data-bs-parent=".accordion-list">
+                <p>
+                  Absolutely. Tabmed AI is designed with a global user base in mind and has the capability to work with websites in a variety of languages, not just limited to English and Chinese. The chatbot's output language can be adjusted by refining the prompt to cater to your specific language requirements.<br><br>
+
+                  Furthermore, our chatbot has the ability to answer queries posed in a multitude of languages. This means you can ask questions in your preferred language, and our chatbot will respond accordingly.
+
+                </p>
+              </div>
+            </li>
+
+            <li data-aos="fade-up"  >
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-14" class="collapsed">Is there scope for customizing my chatbot?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="accordion-list-14" class="collapse" data-bs-parent=".accordion-list">
+                <p>
+                  Absolutely. You can personalize elements such as the color scheme, the chatbot icon, and the name of the chatbot to align with your brand identity. Additionally, you have the flexibility to adjust font sizes to ensure an optimal user experience.
+
+                </p>
+              </div>
+            </li>
+
+            <li data-aos="fade-up"  >
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-15" class="collapsed">My company wants a custom integration or custom feature that is not yet supported by Tabmed AI. What should I do?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="accordion-list-15" class="collapse" data-bs-parent=".accordion-list">
+                <p>
+                  If you need us to build a custom integration for your company, please contact us via our custom plan or <strong><a class="faqlink" href="contact.html">contact us</a></strong> here. We can figure out a custom pricing plan for you, based on your needs.
+
+                </p>
+              </div>
+            </li>
+
 
           </ul>
         </div>
