--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <li><a class="nav-link scrollto" href="kenneth.html">Sign In</a></li>
           <!-- <li><a class="nav-link scrollto" href="diagnosis.html">Differential Diagnostic AI</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="agency.html">Incorporating ChatGPT into Your Business</a></li> -->
-          <li><a class="getstarted scrollto" href="agency.html">Start Your Free Trial</a></li>
+          <li><a class="getstarted scrollto" href="agency.html">Build Your Chatbot Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -132,10 +132,10 @@
                data-rotate='[ "Your Data.", "Your Website.", "Customer Support.", "Lead Generation.", "Internal Training.", "Your Business.", "Your PDFs.", "Your Papers."]'></span></h1>
 <!--
             <h2><a href="kelly.html">🛌 Kelly - 你的AI性健康的醫生。</a> <br><br><a href="jason.html">🥑 Jason - 你的AI營養和健身的醫生。</a><br><br><a href="kenneth.html">🧠 Kenneth- 你的AI心理健康的醫生。</a></h2> -->
-            <h2><strong>Forget clunky FAQ's, mentors or support staff.</strong> Integrate your data and get a ChatGPT-like chatbot in <strong>5 minutes</strong>.<br><br>Effortlessly train your AI from PDFs, word documents, websites, text and Q&As.<br><br>Your own AI for <strong>your</strong> business or educational organisation.<br><br>Then add it as a widget or embed it anywhere freely on your website or app.</h2>
+            <h2>Build <strong>your own AI</strong> for education, healthcare, support, training & research.<br><br><strong>Forget clunky FAQ's, mentors or support staff.</strong> Integrate your data and get a ChatGPT-like chatbot in <strong>5 minutes</strong>.<br><br>Effortlessly train your AI from PDFs, word documents, websites, text and Q&As.<br><br>Then add it as a widget or embed it anywhere freely on your website or app.</h2>
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
-            <a href="pricing.html" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Start Your Free Trial</button></a>
+            <a href="pricing.html" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Build Your Chatbot Now</button></a>
 
             <a href="https://docs.google.com/forms/d/1epN9MZ1ep5TM94BVjWQAzQy7Bfb1O4MSzO5xWdPSgms/viewform?edit_requested=true" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-briefcase-fill"></i>Use Cases</button></a>
 
@@ -252,9 +252,9 @@
             </p>
 
             <p class="mt-5">
-              <strong>Try our no commitment 7 day free trial and see the magic of deploying generative AI in real world use cases.</strong>
+              <strong>See the magic of deploying generative AI in real world use cases.</strong>
             </p>
-            <a href="pricing.html" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Start Your Free Trial</button></a>
+            <a href="pricing.html" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Build Your Chatbot Now</button></a>
             <div class="mt-3">
               <small><a href="pricing.html" class = "link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank" style="text-decoration:none"><u>Or contact us for any questions you might have</u></a></small>
             </div>
@@ -417,7 +417,7 @@
       		<h2 class="text-white mb-4 fs-1">✋ End the Cycle of Repeated Questions with Your Custom-Trained AI Chatbot.</h1>
       		<p class="text-white mb-4">🧠 Leverage AI to Instantly Address 98% of User Queries, Saving Time and Increasing Efficiency.</p>
 
-          <a href="pricing.html" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn mt-5"><i class="bi bi-arrow-right-short"></i>Start Your Free Trial</button></a>
+          <a href="pricing.html" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn mt-5"><i class="bi bi-arrow-right-short"></i>Build Your Chatbot Now</button></a>
           <div class="mt-3">
             <small><a href="pricing.html" class = "link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank" style="text-decoration:none"><u>Or contact us for any questions you might have</u></a></small>
           </div>
