--- a/index.html
+++ b/index.html
@@ -78,33 +78,26 @@
               <li><a href="kelly.html">Kelly - Sexual Health AI</a></li>
               <li><a href="jason.html">Jason - Nutrition & Fitness AI</a></li>
               <li><a href="kenneth.html">Kenenth - Mental health & Well-being AI</a></li>
-              <li><a href="#">Differential Diagnstic AI</a></li>
+              <li><a href="diagnosis.html">Differential Diagnstic AI</a></li>
               <li><a href="telemed.html">Tabmed Telemedicine AI App</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>Use Cases</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="#">Public Health Education</a></li>
+              <li><a href="#">Research & Meta-analysis</a></li>
+              <li><a href="#">Course Mentor & Student Companion</a></li>
+              <li><a href="#">Documentation</a></li>
+              <li><a href="#">Internal Training</a></li>
+              <li><a href="#">24/7 Customer Support</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="https://tabmed.mintlify.app">Documentation</a></li>
           <li><a class="nav-link scrollto" href="pricing.html">Pricing</a></li>
-          <li><a class="nav-link scrollto" href="kenneth.html">Sign In</a></li>
+          <li><a class="nav-link scrollto" href="https://app.tabmed.hk">Sign In</a></li>
           <!-- <li><a class="nav-link scrollto" href="diagnosis.html">Differential Diagnostic AI</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="agency.html">Incorporating ChatGPT into Your Business</a></li> -->
-          <li><a class="getstarted scrollto" href="agency.html">Build Your Chatbot Now</a></li>
+          <li><a class="getstarted scrollto" href="pricing.html">Build Your Chatbot Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -148,7 +141,7 @@
 
           </div>
         </div>
-        <div class="col-lg-5 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
+        <div class="col-lg-5 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img">
           <img src="assets/img/homephone.png" class="img-fluid" alt="">
 
 
@@ -384,7 +377,7 @@
                   <li>💊 Augmented Prescription and Lab Ordering</li>
                   <li>🌐 Referral Management and Network Navigation</li>
                 </ul>
-                <a href="mailto: tabmedhk@gmail.com" class="download-btn"><i class="bi bi-people-fill"></i>Partner With Us</a>
+                <a href="features/prompt-engineering" class="download-btn"><i class="bi bi-arrow-right"></i>Explore Conversation Monitoring</a>
 
               </div>
             </div>
@@ -402,7 +395,7 @@
                   <li>2️⃣ We will connect you to the patient through our chatting and video calling system accessible via an admin dashboard online.</li>
                   <li>3️⃣ You can then send a personalised plan with steps the patient can take with a diagnosis and course of action, including prescription delivery or scheduled physical follow-up in your clinic.</li>
                 </ul>
-                <a href="mailto: tabmedhk@gmail.com" class="download-btn"><i class="bi bi-people-fill"></i>Partner With Us</a>
+                <a href="features/prompt-engineering" class="download-btn"><i class="bi bi-arrow-right"></i>Explore AI Response Refinement</a>
 
 
               </div>
@@ -424,7 +417,7 @@
                   <li>💊 Augmented Prescription and Lab Ordering</li>
                   <li>🌐 Referral Management and Network Navigation</li>
                 </ul>
-                <a href="mailto: tabmedhk@gmail.com" class="download-btn"><i class="bi bi-people-fill"></i>Partner With Us</a>
+                <a href="features/prompt-engineering" class="download-btn"><i class="bi bi-arrow-right"></i>Explore Web & App Embedding</a>
 
               </div>
             </div>
@@ -486,9 +479,9 @@
     <!-- End Details Section -->
 
 
-    <div class="text-center p-5 animated-gradient d-flex flex-column justify-content-center w-100 h-100">
+    <div class="text-center replaceStatement animated-gradient d-flex flex-column justify-content-center w-100 h-100">
 
-      	<div class="d-flex my-5 flex-column justify-content-center align-items-center p-5">
+      	<div class="d-flex my-5 replaceStatementInner flex-column justify-content-center align-items-center p-5">
       		<h2 class="text-white mb-4 fs-1">🫵 People Who Use AI Will Replace Those Who Don't, <u>Will You?</u></h1>
       		<p class="text-white mb-4">🧠 Leverage AI to Instantly Address 98% of User Queries, Saving Time and Increasing Efficiency.</p>
 
