--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
           <div class="container">
 
             <div class="row content">
-              <div class="col-md-4 order-1 order-md-2" data-aos="fade-left">
-                <img src="assets/img/details-2.png" class="img-fluid" alt="">
+              <div class="col-md-6 order-1 order-md-2" data-aos="fade-left">
+                <img src="assets/img/aibotmakerapp/screenshot2.png" class="img-fluid" alt="">
               </div>
-              <div class="col-md-8 pt-5 order-2 order-md-1" data-aos="fade-up">
+              <div class="col-md-6 pt-5 order-2 order-md-1" data-aos="fade-up">
                 <small class="smallText">1. INGEST ANY RESOURCE</small>
                 <h3>Managed Ingestion</h3>
                 <p class="">
@@ -338,10 +338,10 @@
             </div>
 
             <div class="row content">
-              <div class="col-md-4" data-aos="fade-right">
-                <img src="assets/img/details-1.png" class="img-fluid" alt="">
+              <div class="col-md-6" data-aos="fade-right">
+                <img src="assets/img/aibotmakerapp/screenshot1.png" class="img-fluid" alt="">
               </div>
-              <div class="col-md-8 pt-4" data-aos="fade-up">
+              <div class="col-md-6 pt-4" data-aos="fade-up">
                 <small class="smallText">2. CUSTOMISE YOUR MODEL</small>
                 <h3>Prompt Engineering</h3>
                 <p>
@@ -694,8 +694,6 @@
   <script src="assets/js/main.js"></script>
   <script src="assets/js/script.js"></script>
   <script src="assets/js/wave.js"></script>
-
-
 
   <!-- AI BotPress -->
 <!--
