changed more screenshots

--- a/index.html
+++ b/index.html
@@ -362,21 +362,16 @@
             </div>
 
             <div class="row content">
-              <div class="col-md-4 order-1 order-md-2" data-aos="fade-left">
-                <img src="assets/img/details-2.png" class="img-fluid" alt="">
+              <div class="col-md-6 order-1 order-md-2" data-aos="fade-left">
+                <img src="assets/img/aibotmakerapp/screenshot3.png" class="img-fluid" alt="">
               </div>
-              <div class="col-md-8 pt-5 order-2 order-md-1" data-aos="fade-up">
+              <div class="col-md-6 pt-5 order-2 order-md-1" data-aos="fade-up">
                 <small class="smallText">3. REVIEW CONVERSATION HISTORY</small>
                 <h3>Conversation Monitoring</h3>
-                <p class="fst-italic">
-                  At our core, we provide FaceTime-like consultations and online booking for both virtual and physical care, making it easy for patients to recieve the care they need from the comfort of their own homes.
+                <p>
+                  Access conversation histories effortlessly and view previous interactions for valuable insights, seamless continuity, and strategic adjustments.
                 </p>
-                <ul>
-                  <li>👩‍⚕️ Personalised PCP (Primary Care Provider)</li>
-                  <li>📈 Care Programs and Condition Management</li>
-                  <li>💊 Augmented Prescription and Lab Ordering</li>
-                  <li>🌐 Referral Management and Network Navigation</li>
-                </ul>
+
                 <a href="features/prompt-engineering" class="download-btn"><i class="bi bi-arrow-right"></i>Explore Conversation Monitoring</a>
 
               </div>
@@ -384,17 +379,13 @@
 
             <div class="row content">
               <div class="col-md-4" data-aos="fade-right">
-                <img src="assets/img/details-3.png" class="img-fluid" alt="">
+                <img src="assets/img/aibotmakerapp/screenshot4.png" class="img-fluid" alt="">
               </div>
               <div class="col-md-8 pt-5" data-aos="fade-up">
                 <small class="smallText">4. RETRAIN SUB-OPTIMAL RESPONSES</small>
                 <h3>AI Response Refinement</h3>
-                <p>As a clinic or healthcare proider, it is becoming increasingly important for you to incorporate telemedicine technology in order to <strong>meet the demands of patients and stay competitive</strong>. We believe that our telemedicine platform can help you do just that Here is .</p>
-                <ul>
-                  <li>1️⃣ Patient messages you from the TabMed app whether they need urgent care, a routine checkup, a prescription refill, have a question or need advice.</li>
-                  <li>2️⃣ We will connect you to the patient through our chatting and video calling system accessible via an admin dashboard online.</li>
-                  <li>3️⃣ You can then send a personalised plan with steps the patient can take with a diagnosis and course of action, including prescription delivery or scheduled physical follow-up in your clinic.</li>
-                </ul>
+                <p>Take control with Tabmed AI's retraining feature. Our platform enables you to identify sub-optimal responses and refine them for better user interactions. It's about continuous improvement and learning from experience - because even the smartest AI needs a little guidance now and then. Mold your AI chatbot to provide more accurate, relevant, and engaging responses, ensuring optimal performance at all times.</p>
+
                 <a href="features/prompt-engineering" class="download-btn"><i class="bi bi-arrow-right"></i>Explore AI Response Refinement</a>
 
 
