updated all screenshots on main page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
       </div>
 
       <nav id="navbar" class="navbar">
+
         <ul>
+          <li><a class="nav-link scrollto" href="pricing.html">AI Roleplay For Education</a></li>
           <li class="dropdown"><a href="#"><span>AI Doctors</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
 
@@ -82,17 +84,19 @@
               <li><a href="telemed.html">Tabmed Telemedicine AI App</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="#"><span>Use Cases</span> <i class="bi bi-chevron-down"></i></a>
+          <!-- <li class="dropdown"><a href="#"><span>Use Cases</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Public Health Education</a></li>
               <li><a href="#">Research & Meta-analysis</a></li>
               <li><a href="#">Course Mentor & Student Companion</a></li>
+              <li><a href="#">Role Play & Stimulation</a></li>
               <li><a href="#">Documentation</a></li>
               <li><a href="#">Internal Training</a></li>
               <li><a href="#">24/7 Customer Support</a></li>
             </ul>
-          </li>
-          <li><a class="nav-link scrollto" href="https://tabmed.mintlify.app">Documentation</a></li>
+          </li> -->
+          <!-- <li><a class="nav-link scrollto" href="https://tabmed.mintlify.app">Documentation</a></li> -->
+          <li><a class="nav-link scrollto" href="agency.html">Our Agency</a></li>
           <li><a class="nav-link scrollto" href="pricing.html">Pricing</a></li>
           <li><a class="nav-link scrollto" href="https://app.tabmed.hk">Sign In</a></li>
           <!-- <li><a class="nav-link scrollto" href="diagnosis.html">Differential Diagnostic AI</a></li> -->
@@ -394,19 +398,19 @@
 
             <div class="row content">
               <div class="col-md-4 order-1 order-md-2" data-aos="fade-left">
-                <img src="assets/img/details-2.png" class="img-fluid" alt="">
+                <img src="assets/img/aibotmakerapp/screenshot5.png" class="img-fluid" alt="">
               </div>
               <div class="col-md-8 pt-5 order-2 order-md-1" data-aos="fade-up">
                 <small class="smallText">5. FLEXIBLE EMBEDDING</small>
                 <h3>Deploy Your Chatbot</h3>
                 <p class="fst-italic">
-                  At our core, we provide FaceTime-like consultations and online booking for both virtual and physical care, making it easy for patients to recieve the care they need from the comfort of their own homes.
+                  Unleash the power of flexibility with Tabmed AI's embedding options. It's your chatbot, your way. Let's ensure it reaches your audience wherever they are.
                 </p>
                 <ul>
-                  <li>👩‍⚕️ Personalised PCP (Primary Care Provider)</li>
-                  <li>📈 Care Programs and Condition Management</li>
-                  <li>💊 Augmented Prescription and Lab Ordering</li>
-                  <li>🌐 Referral Management and Network Navigation</li>
+                  <li>💻 Integrating as a chat bubble on your website via one line Javascript</li>
+                  <li>🌍 Embedding it anywhere on your website via iframe</li>
+                  <li>📱 Embedding it in your mobile app via iframe and WebKit/WebView</li>
+
                 </ul>
                 <a href="features/prompt-engineering" class="download-btn"><i class="bi bi-arrow-right"></i>Explore Web & App Embedding</a>
 
@@ -414,6 +418,9 @@
             </div>
 
             <div class="row content">
+                <div class="text-center">
+                  <img class="agency-logo" src="assets/img/tabmedlogo-agency.png" alt="">
+                </div>
                 <h3 class="text-center">TabMed Helps You Enable and Execute Your Virtual Care Strategy</h3>
                 <p class="fst-italic text-center">
                   TabMed is an ideal partner for family, vetinary, dental, specialised and mental health clinics. Why partner with us? Here are some benefits to allow you to stay competitive:
